column spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 .container {
 	margin: 0.3rem;
-	max-width: 80%;
+	max-width: 95%;
 	width: 200rem;
 }
 
@@ -78,7 +78,8 @@ h1 {
 #search-history {
 	margin-top: 20px;
 	border-radius: 5px;
-	-webkit-box-shadow: 0 0.5em 1em 0;
+	box-shadow: 0 0.5em 1em 0;
+	font-size: 20px;
 }
 
 .button {
@@ -86,7 +87,8 @@ h1 {
 	border-radius: 10px;
 }
 
-button:hover {
+button:hover,
+a:hover {
 	box-shadow: 0 0.4rem 1.4rem 0 rgba(4, 7, 0, 0.521);
     transition: transform 150ms;
     transform: scale(1.03);
@@ -97,7 +99,7 @@ button:hover {
 	font-size: 1rem;
 }
 
-#search-history li{
+ #search-history li{ 
 	box-shadow: inset 0 0.4rem 1.4rem 0 rgb(252, 190, 99);
 }
 
@@ -105,12 +107,13 @@ button:hover {
 	background-color: var(--tertiary-color);
 	color: rgb(7, 7, 154);
 	box-shadow: 0 0.4rem 1.4rem 0 rgba(4, 7, 0, 0.521);
-	border-radius: 10px;
+	border-radius: 1px;
 }
 
 .label {
 	color: var(--primary-color);
 	font-weight: 800;
+	font-size: 1.7rem;
 }
 .lyrics-text {
 	margin-bottom: 1rem;
@@ -118,4 +121,21 @@ button:hover {
 
 .copier {
 	margin-right: 0.5rem;
+}
+
+#placeholder {
+	height: 500px;
+	width: 500px;
+}
+
+.js-modal-trigger,
+#full-song-url {
+	margin-left: 30px;
+	background-color: white !important;
+	color: var(--primary-color) !important;
+}
+
+.page-content {
+	width: 90%;
+	margin-top: 20px;
 }
